feat : env.example
- menambahkan fiel epi key untuk openwetahermap

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,8 @@ DB_DATABASE=nusatawan_db
 DB_USERNAME=root
 DB_PASSWORD=
 
+OPENWEATHER_API_KEY=YOUR_API_KEY
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
