--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,8 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 OPENWEATHER_API_KEY=YOUR_API_KEY
+OPENWEATHERMAP_API_URL=https://api.openweathermap.org/data/2.5
+OPENWEATHERMAP_CACHE_MINUTES=60
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
